--- a/assets/package.json
+++ b/assets/package.json
@@ -7,12 +7,11 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "alpinejs": "^2.7.3",
-    "nprogress": "^0.2.0",
+    "alpinejs": "^3.10.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -23,7 +22,7 @@
     "css-loader": "^3.4.2",
     "hard-source-webpack-plugin": "^0.13.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "sass": "^1.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^8.1.14",
     "postcss-loader": "^4.1.0",
